[project]
name = "markdowntopdf"
version = "0.1.0"
description = "Converts a Markdown file to a PDF."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "markdown>=3.8.2",
    "werkzeug>=3.1.3",
    "xhtml2pdf>=0.2.17",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.9",
]
