[project]
name = "markdowntopdf"
version = "0.1.0"
description = "Converts a Markdown file to a PDF."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "markdown>=3.8.2",
    "werkzeug>=3.1.3",
    "xhtml2pdf>=0.2.17",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main", "service"]

[dependency-groups]
dev = [
    "playwright>=1.55.0",
    "pytest>=8.4.1",
    "pytest-cov>=7.0.0",
    "pytest-playwright>=0.7.1",
    "ruff>=0.12.9",
]

[tool.pytest.ini_options]
markers = [
    "unit: Unit tests that test individual functions in isolation",
    "integration: Integration tests that test multiple components together",
    "e2e: End-to-end tests using Playwright browser automation",
]
